src/main/java/com/example/app/Utility/Errors/LabelKey.java
package com.example.app.Utility.Errors;

public final class LabelKey {
    public static final String ERROR_INVALID_PASSWORD = "error.invalid-password";
    public static final String ERROR_INVALID_USERNAME = "error.invalid-username";
    public static final String ERROR_INVALID_PHONE = "error.invalid-phone";
    public static final String ERROR_INVALID_GMAIL = "error.invalid-gmail";
    public static final String ERROR_INVALID_DATA = "error.invalid-data";
}
